--- a/env-dev/frontend.yaml
+++ b/env-dev/frontend.yaml
@@ -3,7 +3,7 @@ service:
   port: "80"
   containerPort: "80"
 configmap_data:
-  CATLOGUE_HOST: "catalogue"
+  CATALOGUE_HOST: "catalogue"
   CATALOGUE_PORT: "8080"
   USER_HOST: "user"
   USER_PORT: "8080"
