--- a/env-dev/frontend.yaml
+++ b/env-dev/frontend.yaml
@@ -6,6 +6,8 @@ service:
 configmap_data:
   CATALOGUE_HOST: "catalogue"
   CATALOGUE_PORT: "8080"
+  CART_HOST: "cart"
+  CART_PORT: "8080"
   USER_HOST: "user"
   USER_PORT: "8080"
   SHIPPING_HOST: "shipping"
