--- a/env-dev/shipping.yaml
+++ b/env-dev/shipping.yaml
@@ -3,10 +3,10 @@ component_name: shipping
 configmap_data:
   CART_ENDPOINT: "cart:8080"
   DB_HOST: "mysql-dev.salman06.shop"
-  DB_TYPE: mysql
-  APP_GIT_URL: https://github.com/roboshop-devops-project-v3/shipping
-  DB_USER: root
-  DB_PASS: RoboShop@1
+  DB_TYPE: "mysql"
+  APP_GIT_URL: "https://github.com/roboshop-devops-project-v3/shipping"
+  DB_USER: "root"
+  DB_PASS: "RoboShop@1"
 
 schema:
   enabled: true
