--- a/env-dev/frontend.yaml
+++ b/env-dev/frontend.yaml
@@ -18,3 +18,12 @@ configmap_data:
 ingress:
   enabled: true
   name: frontend-dev.salman06.shop
+
+
+resources:
+  requests:
+    memory: "100Mi"
+    cpu: "150m"
+  limits:
+    memory: "200Mi"
+    cpu: "250m"
