--- a/env-dev/catalogue.yaml
+++ b/env-dev/catalogue.yaml
@@ -11,3 +11,11 @@ schema:
   jobs:
     - master-data
   extention: js
+
+resources:
+  requests:
+    memory: "50Mi"
+    cpu: "150m"
+  limits:
+    memory: "100Mi"
+    cpu: "250m"
