--- a/env-dev/payment.yaml
+++ b/env-dev/payment.yaml
@@ -3,7 +3,7 @@ component_name: payment
 configmap_data:
   CART_HOST: "cart"
   CART_PORT: "8080"
-  USER_HOST: "catalogue"
+  USER_HOST: "user"
   USER_PORT: "8080"
   AMQP_HOST: "rabbitmq-dev.salman06.shop"
   AMQP_USER: "roboshop"
