--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       - name: roboshop-{{ .Values.component_name }}
         image: public.ecr.aws/w8x4g9h7/roboshop-v3/{{ .Values.component_name }}
         envFrom:
-          - configMapRef:
+          - SecretRef:
               name: {{ .Values.component_name }}
         readinessProbe:
           httpGet:
