--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -45,3 +45,5 @@ spec:
         resources:
           {{- toYaml . | nindent 12 }}
         {{- end }}
+        securityContext:
+          readOnlyRootFilesystem: true
